# waverider

./: .gitignore  Cargo.toml  LICENSE  README.md  config.example.json  package.json
config/: config.atlantic.json  config.default.json  config.default.mac.json  default.sql
src/: plugin.rs
waverider/atlantic/: Cargo.toml
waverider/atlantic/src/: lib.rs  plugin.rs
waverider/default/: .gitignore  Cargo.toml
waverider/default/src/: plugin.rs
