[package]
name = "waverider_default"
version = "0.0.3"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
solana-geyser-plugin-interface = "=1.15.2"
solana-program = "=1.15.2"
postgrest = "1.2"
async-std = "1.10.0"
hyper = "0.14.26"
tokio = { version = "1.8", features = ["full"] }
serde_json = "1.0.96"
bs58 = "0.4.0"
serde = "1.0.160"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
